--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -42,13 +42,13 @@
               </form>
           </div>
           <div class="buttons">
-              <div class="submit-btn" onclick="window.open('http://www.youtube.com');">
+              <div class="submit-btn" onclick="window.open('https://youtu.be/8q3qje9K5uU')">
                   Watch video
               </div>
-              <div class="submit-btn" onclick="window.open('http://www.github.com');">
+              <div class="submit-btn" onclick="window.open('https://github.com/kying18/doggo-roulette/tree/master/website')">
                   Link to code
               </div>
-              <div class="submit-btn" onclick="winow.open('http://www.youtube.com/y_cubed?sub_confirmation=1');">
+              <div class="submit-btn" onclick="window.open('https://www.youtube.com/y_cubed?sub_confirmation=1')">
                   Subscribe
               </div>
           </div>
